--- a/force-app/main/default/classes/ContentVersionTriggerHelper.cls
+++ b/force-app/main/default/classes/ContentVersionTriggerHelper.cls
@@ -9,6 +9,10 @@ public with sharing class ContentVersionTriggerHelper {
     
     public Static boolean IsAttachmentupdated = false;
     public static boolean massUploadTriggerExecuted = false;
+    public static Id MassUploadRecordTypeId;
+    public static List<contentversion> contentvarid=null;
+    public static Integer count=1;
+    public static List<ContentDocumentLink> contentDocumentsLink=null;
     public ContentVersionTriggerHelper() {
         
     }
@@ -21,41 +25,47 @@ public with sharing class ContentVersionTriggerHelper {
             itemIds.add(item.id);
             System.debug('itemids'+itemIds);
         }
-        
-        List<ContentVersion> contentvarid =[SELECT Id,ContentDocumentId FROM ContentVersion WHERE Id In:itemIds];
+        if(contentvarid==null || contentvarid.size()==0) {
+        contentvarid =[SELECT Id,ContentDocumentId FROM ContentVersion WHERE Id In:itemIds];
         System.debug('ContentDocumentId==>'+contentvarid);
-        
+        }
         List<String> contdocIds = new List<String>();
         
         for(ContentVersion contvar:contentvarid){
             
             contdocIds.add(contvar.ContentDocumentId);
+           
         }
-        List<ContentDocumentLink> contentDocumentsLink=[select id,ContentDocumentId,LinkedEntityId from ContentDocumentLink where ContentDocumentId IN:contdocIds];
+        system.debug('contdocIds==>'+contdocIds);
+        if(count<=2)
+        {
+           count++;
+        contentDocumentsLink=[select id,ContentDocumentId,LinkedEntityId from ContentDocumentLink where ContentDocumentId IN:contdocIds];
         
         System.debug('ContentDocumentLink'+contentDocumentsLink);
-        
+        }
         List<String> MassUploadIds=new List<String>();
         
         for(ContentDocumentLink linkId :contentDocumentsLink)
         {
             MassUploadIds.add(linkId.LinkedEntityId);
         }
-        System.debug('content Link id is' +MassUploadIds);
-        Id MassUploadRecordTypeId = [SELECT Id, Name, DeveloperName, SobjectType, IsActive FROM RecordType where SobjectType='Mass_Upload_CSV__c' and Name='Original' limit 1].Id;
-        List<Mass_Upload_CSV__c> massUploadCSVs = [SELECT Id,isAttachment__c,Status__c FROM Mass_Upload_CSV__c WHERE Id IN : MassUploadIds and recordTypeId=:MassUploadRecordTypeId];
+        System.debug('MassUploadIds is ==>' +MassUploadIds);
+        if(MassUploadRecordTypeId==null){
+        	MassUploadRecordTypeId = [SELECT Id, Name, DeveloperName, SobjectType, IsActive FROM RecordType where SobjectType='Mass_Upload_CSV__c' and Name='Original' limit 1].Id;
+            }
+          System.debug('Record type id'+MassUploadRecordTypeId);
+        List<Mass_Upload_CSV__c> massUploadCSVs = [SELECT Id,isAttachment__c,Status__c,recordTypeId FROM Mass_Upload_CSV__c WHERE Id IN : MassUploadIds and recordTypeId=:MassUploadRecordTypeId];
         
         if(massuploadCSVs.size() > 0){
             System.debug('Is Checkbox True?==>'+massUploadCSVs[0].isAttachment__c);
-            
             massUploadCSVs[0].isAttachment__c = true;
             massUploadCSVs[0].Status__c='Inprogress';
             IsAttachmentupdated=true;
             System.debug('Checkbox True==>'+massUploadCSVs[0].isAttachment__c);
             update massUploadCSVs;
         }
-        
-        
+
     }
     
 }
